cmake_minimum_required(VERSION 3.16)
project(bitset-header)
add_executable(construct_bitset ./construct_bitset.cpp)
add_executable( bitset_operator ./bitset_operator.cpp)
add_executable( count_set_bit ./count_set_bit.cpp)
add_executable( bit_set ./bit_set.cpp)
add_executable( bit_operations ./bit_operations.cpp)



